fix up gradient and texts, also added color picker component

--- a/src/index.css
+++ b/src/index.css
@@ -160,3 +160,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+.border-b-2 {
+  border-image: linear-gradient(var(--gradient-direction, to right), var(--gradient-from, #3acfd5), var(--gradient-to, #3a4ed5)) 1;
+  border-style: solid;
+  border-bottom: 2px solid red;
+}
